--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present active">มาเรียน</button>
-                <button class="status-btn late">มาสาย</button>
+                <button class="status-btn present active">มา</button>
+                <button class="status-btn late">ลา</button>
                 <button class="status-btn sick">ป่วย</button>
                 <button class="status-btn absent">ขาด</button>
             </div>
@@ -36,8 +36,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present active">มาเรียน</button>
-                <button class="status-btn late">มาสาย</button>
+                <button class="status-btn present active">มา</button>
+                <button class="status-btn late">ลา</button>
                 <button class="status-btn sick">ป่วย</button>
                 <button class="status-btn absent">ขาด</button>
             </div>
@@ -52,8 +52,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present active">มาเรียน</button>
-                <button class="status-btn late">มาสาย</button>
+                <button class="status-btn present active">มา</button>
+                <button class="status-btn late">ลา</button>
                 <button class="status-btn sick">ป่วย</button>
                 <button class="status-btn absent">ขาด</button>
             </div>
