--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
     </div>
 
-    <div class="export-container">
-        <button id="export-button">แสดงข้อมูลที่เก็บไว้ (ใน Console)</button>
-    </div>
+   <!----> <div class="export-container"> -->
+    <!--    <button id="export-button">แสดงข้อมูลที่เก็บไว้ (ใน Console)</button> -->
+   <!-- </div> -->
 
     <script src="script.js"></script>
 </body>
