--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present" data-status="present">มาเรียน</button>
-                <button class="status-btn late" data-status="late">มาสาย</button>
+                <button class="status-btn present" data-status="present">มา</button>
+                <button class="status-btn late" data-status="late">ลา</button>
                 <button class="status-btn sick" data-status="sick">ป่วย</button>
                 <button class="status-btn absent" data-status="absent">ขาด</button>
             </div>
@@ -36,8 +36,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present" data-status="present">มาเรียน</button>
-                <button class="status-btn late" data-status="late">มาสาย</button>
+                <button class="status-btn present" data-status="present">มา</button>
+                <button class="status-btn late" data-status="late">ลา</button>
                 <button class="status-btn sick" data-status="sick">ป่วย</button>
                 <button class="status-btn absent" data-status="absent">ขาด</button>
             </div>
@@ -52,8 +52,8 @@
                 </div>
             </div>
             <div class="button-group">
-                <button class="status-btn present" data-status="present">มาเรียน</button>
-                <button class="status-btn late" data-status="late">มาสาย</button>
+                <button class="status-btn present" data-status="present">มา</button>
+                <button class="status-btn late" data-status="late">ลา</button>
                 <button class="status-btn sick" data-status="sick">ป่วย</button>
                 <button class="status-btn absent" data-status="absent">ขาด</button>
             </div>
@@ -61,7 +61,7 @@
 
     </div>
 
-   <!----> <div class="export-container"> -->
+   <!-- <div class="export-container"> -->
     <!--    <button id="export-button">แสดงข้อมูลที่เก็บไว้ (ใน Console)</button> -->
    <!-- </div> -->
 
